# marketplace_in_c

./: .gitignore  CMakeLists.txt  categories.c  categories.h  categories.txt  generate_data.txt  image.c  image.h  images.txt  interaction.c  interaction.h  io.c  io.h  main.c  product.c  product.h  settings.h  stack.c  stack.h  tree.c  tree.cpp  tree.h
linux-specific/: conio.c  conio.h
